--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 .DS_Store
 node_modules
 /dist
+src/firebase/firebase.config.js
 
 
 # local env files
 .env.local
 .env.*.local
-
+.env
 # Log files
 npm-debug.log*
 yarn-debug.log*
