--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "bootstrap": "^4.5.3",
     "core-js": "^3.6.5",
+    "firebase": "^8.2.1",
+    "quill": "^1.3.6",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
